misc fixes